# Generated by Django 6.0.5 on 2026-05-12 18:51

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Book',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=200)),
                ('author', models.CharField(max_length=100)),
                ('genre', models.CharField(choices=[('Programming', 'Programming'), ('Fiction', 'Fiction'), ('Sci-Fi', 'Sci-Fi'), ('Science', 'Science'), ('History', 'History'), ('Other', 'Other')], default='Other', max_length=100)),
                ('description', models.TextField(blank=True, default='')),
                ('status', models.CharField(choices=[('available', 'Available'), ('borrowed', 'Borrowed')], default='available', max_length=20)),
                ('image', models.TextField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
    ]
